--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,18 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Setup Java
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-    
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    
-    - name: Run tests with JUnit
-      run: mvn test --file pom.xml
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+
+      - name: Build and test
+        run: |
+          ./gradlew build
